fix: better spacings

--- a/src/styles/components/_single-word.scss
+++ b/src/styles/components/_single-word.scss
@@ -128,9 +128,40 @@
     font-weight: 400;
   }
 
-  &__sub-headline {
+  h2 {
     margin: var(--spacing-outer, 0 0 vars.$spacer * 0.25 0);
     font-size: 2rem;
+  }
+
+  h3 {
+    font-size: 1.5rem;
+  }
+
+  h4 {
+    font-size: 1.25rem;
+  }
+
+  h3,
+  h4,
+  h5,
+  h6 {
+    font-family: vars.$berlin;
+    font-weight: 700;
+    margin-block: 1.5em 1em;
+  }
+
+  :where(p, a, li) {
+    font-size: 1.15rem;
+  }
+
+  :where(li) {
+    line-height: 1.5;
+  }
+
+  &__syllables {
+    .is-divider {
+      font-weight: 700;
+    }
   }
 
   &__word-type-wrapper {
@@ -163,10 +194,6 @@
     display: flex;
     flex-direction: column;
     row-gap: vars.$spacer * 1;
-
-    &-item {
-      font-size: 1.5rem;
-    }
   }
 
   &__quote-icon {
